--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,6 +11,10 @@
     <packaging>jar</packaging>
     <artifactId>backend</artifactId>
 
+    <properties>
+        <lombok.version>1.16.22</lombok.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>ru.ak.telemetry</groupId>
@@ -24,6 +28,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
         </dependency>
@@ -31,6 +39,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 
