--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,9 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19",
-    "bootstrap": "^4.1.0",
-    "jquery": "^3.3.1"
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.2",
