--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -3,10 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>client</artifactId>
+        <artifactId>server</artifactId>
         <groupId>ru.ak.telemetry</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <artifactId>backend</artifactId>
